# stash-rs

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: main.rs
src/application/: mod.rs
src/application/cli/: arguments.rs  dispatch.rs  inference.rs  mod.rs  prompt.rs
src/application/features/: clean.rs  delete.rs  dump.rs  history.rs  info.rs  list.rs  mod.rs  peek.rs  pop.rs  push.rs  rename.rs  search.rs  tar.rs
src/core/: mod.rs
src/models/: config.rs  entry.rs  index.rs  item.rs  mod.rs  operation.rs  stash.rs
src/operations/: entry_manager.rs  mod.rs
src/services/: entry_manager.rs  mod.rs
src/services/filesystem/: file_compression.rs  mod.rs  permission_handler.rs  tape_archives.rs
src/services/storage/: config_storage.rs  index_storage.rs  journal.rs  journal_storage.rs  mod.rs
src/storage/: mod.rs
src/utils/: display.rs  mod.rs  paths.rs
