[package]
name = "stash-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
dirs = "6.0"
toml = "0.8"
walkdir = "2.4"
sha2 = "0.10.9"
bzip2 = "0.6.1"
flate2 = "1.1.5"
tar = "0.4.44"
dircpy = "0.3.19"
console = "0.16.2"
filetime = "0.2.26"
